fix scrollbar and style scrollbar

--- a/src/app/shared/components/item-page/item-page.component.scss
+++ b/src/app/shared/components/item-page/item-page.component.scss
@@ -1,7 +1,36 @@
-
 // * {
 //     background: bisque;
 // }
-:host{
+:host {
     background: bisque;
+    overflow-y: auto;
+    max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+
+}
+
+
+
+
+@media (min-width: 1000px) {
+    :host::-webkit-scrollbar {
+        width: 20px;
+        height: 20px
+    }
+
+    :host::-webkit-scrollbar-thumb {
+        background: linear-gradient(180deg, #e0d03f, #a06903) !important;
+        border-radius: 30px !important;
+        box-shadow: inset 2px 2px 2px #c3b359, inset -2px -2px 2px rgba(0, 0, 0, 0.25) !important;
+    }
+
+    :host::-webkit-scrollbar-track {
+        background: linear-gradient(90deg, #94ca0f 1px, #000000 0, #000000) !important;
+    }
+
+    ::selection {
+        color: #94ca0f !important;
+        background: black !important;
+    }
 }
